<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Expired task -->

    <TextView
        android:id="@+id/txt_task_folder_expired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_task_folder_expired"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lst_task_folder_expired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <TextView
        android:id="@+id/txt_task_folder_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_task_folder_day"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lst_task_folder_day"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

    <TextView
        android:id="@+id/txt_task_folder_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_task_folder_week"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lst_task_folder_week"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

    <TextView
        android:id="@+id/txt_task_folder_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_task_folder_month"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lst_task_folder_month"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

    <TextView
        android:id="@+id/txt_task_folder_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_task_folder_other"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lst_task_folder_other"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

    <TextView
        android:id="@+id/txt_task_folder_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_task_folder_finish"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lst_task_folder_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
   
</LinearLayout>
